--- a/presentation/src/main/res/layout/activity_splash.xml
+++ b/presentation/src/main/res/layout/activity_splash.xml
@@ -17,6 +17,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="이름 궁합"
+            android:fontFamily="@font/clova_"
             android:textColor="@color/white"
             android:textSize="40sp"
             android:textStyle="bold"
