--- a/presentation/src/main/res/layout/fragment_man_name.xml
+++ b/presentation/src/main/res/layout/fragment_man_name.xml
@@ -25,6 +25,7 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <TextView
+                android:fontFamily="@font/clova_"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="20sp"
