--- a/presentation/src/main/res/layout/fragment_result.xml
+++ b/presentation/src/main/res/layout/fragment_result.xml
@@ -30,6 +30,7 @@
                 android:src="@drawable/ic_result_love" />
 
             <TextView
+                android:fontFamily="@font/clova_"
                 android:id="@+id/score"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -40,6 +41,7 @@
                 android:textColor="@color/main_color" />
 
             <TextView
+                android:fontFamily="@font/clova_"
                 android:id="@+id/message"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
