--- a/presentation/src/main/res/layout/score_recycler_item.xml
+++ b/presentation/src/main/res/layout/score_recycler_item.xml
@@ -26,6 +26,7 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <TextView
+                android:fontFamily="@font/clova_"
                 android:text="여자"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -34,6 +35,7 @@
                 android:textStyle="bold" />
 
             <TextView
+                android:fontFamily="@font/clova_"
                 set_man="@{data.man}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -56,6 +58,7 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <TextView
+                android:fontFamily="@font/clova_"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="확률"
@@ -64,6 +67,7 @@
                 android:textStyle="bold" />
 
             <TextView
+                android:fontFamily="@font/clova_"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="7dp"
@@ -85,6 +89,7 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <TextView
+                android:fontFamily="@font/clova_"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="남자"
@@ -93,6 +98,7 @@
                 android:textStyle="bold" />
 
             <TextView
+                android:fontFamily="@font/clova_"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="7dp"
